Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-17451

`lctl dl` with Netlink/YAML fails with large numer of devices

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.17.0
    • None
    • None
    • 3
    • 9223372036854775807

      See the following error:

      [centos][127][~/Programming/lustre-release]$ sudo ./lustre/utils/lctl dl
        0 UP osd-zfs lustre-MDT0000-osd lustre-MDT0000-osd_UUID 10
        1 UP mgs MGS MGS 5
        2 UP mgc MGC172.31.20.187@tcp 9de548fc-f02c-405d-99b8-56dc3e23d83a 5
        3 UP mds MDS MDS_uuid 3
      ...
      158 UP obd_test obd_name_136 obd_uuid_136 3
      159 UP obd_test obd_name_137 obd_uuid_137 3
      160 UP obd_test obd_name_138 obd_uuid_138 3
      161 UP obd_test obd_name_139 obd_uuid_139 3
      162 UP obd_test obd_name_140 obd_uuid_140 3
      163 UP obd_test obd_name_141 obd_uuid_141 3
      Scanner error: while scanning a simple key at line 990, column 3
      could not find expected ':' at line 991, column 1
      free(): invalid next size (normal)
      Aborted 

      It appears like whatever Netlink is returning isn't being correctly interpreted as a YAML. This only happens when using a large number of devices.

            simmonsja James A Simmons
            timday Tim Day
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: