LU-17451 obd: calculate the needed skbuf size for devices

By default Netlink skbuf size is 64K which is too small for some
setups for our devices list. Lets calculate pretty close to the
actually size of the skbuf needed to send our message. If we
do fail allocating the key table send a proper error message.

Handle reporting errors for older kernels with old_dump style.

Since older platforms (RHEL7 + SLES12SP5) don't support larger
Netlink messages then report an error in this case so we fall
back to the old debugfs method. Add a new flag to not report
an error in the case we have a valid failback to not clutter
the output.

Test-Parameters: trivial testlist=sanity env=ONLY=55
Change-Id: I081ce1b86c139a7e4b93bf759b7d19e6e5c2bafb
Signed-off-by: James Simmons <jsimmons@infradead.org>
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/54152
Reviewed-by: Shaun Tancheff <shaun.tancheff@hpe.com>
Reviewed-by: Arshad Hussain <arshad.hussain@aeoncomputing.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>